parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHARACTER
    PER
    LESSTHAN
    QUOTE
    DIFF
    COMMENT
    TIPO
    LESSEQ
    GRE
    GREATERTHAN
    INTEGER
    EQ
    AND
    GREATEQ
    LOGICAL
    CTED
    CTEI
    OR

Grammar

Rule 0     S' -> lugstat
Rule 1     lugstat -> LUGSTAT ID SCOLON lugstat2 lugstat3 block
Rule 2     lugstat2 -> vars
Rule 3     lugstat2 -> empty
Rule 4     lugstat3 -> modules
Rule 5     lugstat3 -> modules lugstat3
Rule 6     lugstat3 -> empty
Rule 7     vars -> VAR vars1 COLON tipo SCOLON
Rule 8     vars1 -> ID
Rule 9     vars1 -> ID COMMA vars1
Rule 10    vars1 -> ID asign2
Rule 11    vars1 -> ID asign2 COMMA vars1
Rule 12    modules -> FUNC ID COLON tipo OPAREN modules2 CPAREN modules2 block
Rule 13    modules2 -> vars
Rule 14    modules2 -> empty
Rule 15    block -> OBRACKET block2 CBRACKET
Rule 16    block2 -> estatuto
Rule 17    block2 -> estatuto block2
Rule 18    block2 -> empty
Rule 19    tipo -> INT
Rule 20    tipo -> BOOL
Rule 21    tipo -> DOUBLE
Rule 22    tipo -> STRING
Rule 23    tipo -> CHAR
Rule 24    estatuto -> asign
Rule 25    estatuto -> cond
Rule 26    estatuto -> escrt
Rule 27    estatuto -> plot
Rule 28    estatuto -> count
Rule 29    estatuto -> countif
Rule 30    estatuto -> metodos
Rule 31    asign -> ID EQUALS expresion SCOLON
Rule 32    asign -> ID EQUALS ID SCOLON
Rule 33    asign -> ID EQUALS ID asign2 SCOLON
Rule 34    asign -> ID asign2 EQUALS ID SCOLON
Rule 35    asign -> ID asign2 EQUALS expresion SCOLON
Rule 36    asign -> ID asign2 EQUALS ID asign2 SCOLON
Rule 37    asign2 -> LCOR expresion RCOR asign3
Rule 38    asign2 -> LCOR varcte RCOR asign3
Rule 39    asign3 -> LCOR expresion RCOR
Rule 40    asign3 -> LCOR varcte RCOR
Rule 41    asign3 -> empty
Rule 42    escrt -> PRINT OPAREN expresion CPAREN SCOLON
Rule 43    escrt -> PRINT OPAREN CPAREN SCOLON
Rule 44    escrt -> PRINT OPAREN ID escrt2 CPAREN SCOLON
Rule 45    escrt -> PRINT OPAREN STRING CPAREN SCOLON
Rule 46    escrt2 -> COMMA escrt3
Rule 47    escrt2 -> empty
Rule 48    escrt3 -> ID escrt2
Rule 49    escrt3 -> ID
Rule 50    escrt3 -> STRING escrt2 escrt2
Rule 51    cond -> IF OPAREN expresion CPAREN block SCOLON
Rule 52    cond -> IF OPAREN expresion CPAREN block ELSE block SCOLON
Rule 53    count -> COUNT OPAREN ID COMMA varcte COMMA varcte CPAREN SCOLON
Rule 54    countif -> COUNTIF OPAREN ID COMMA varcte COMMA varcte COMMA cond CPAREN SCOLON
Rule 55    plot -> PLOT OPAREN xyfunc CPAREN SCOLON
Rule 56    plot -> PLOT OPAREN plot2 CPAREN SCOLON
Rule 57    plot2 -> LCOR varcte COMMA varcte RCOR
Rule 58    plot2 -> LCOR varcte COMMA varcte RCOR COMMA plot2
Rule 59    plot2 -> empty
Rule 60    xyfunc -> FX EQUALS exp SCOLON xyfunc
Rule 61    xyfunc -> FY EQUALS exp SCOLON xyfunc
Rule 62    xyfunc -> empty
Rule 63    expresion -> exp
Rule 64    expresion -> expresion RELOP exp
Rule 65    exp -> termino
Rule 66    exp -> termino PLUS exp
Rule 67    exp -> termino MINUS exp
Rule 68    termino -> factor
Rule 69    termino -> factor MULT termino
Rule 70    termino -> factor DIV termino
Rule 71    factor -> OPAREN expresion CPAREN
Rule 72    factor -> PLUS varcte
Rule 73    factor -> MINUS varcte
Rule 74    factor -> varcte
Rule 75    varcte -> ID
Rule 76    varcte -> ID asign2
Rule 77    varcte -> NUMERIC
Rule 78    varcte -> NUMBER
Rule 79    metodos -> MEAN OPAREN mmmfunc CPAREN SCOLON
Rule 80    metodos -> MEDIAN OPAREN mmmfunc CPAREN SCOLON
Rule 81    metodos -> MODE OPAREN mmmfunc CPAREN SCOLON
Rule 82    metodos -> STDV OPAREN mmmfunc CPAREN SCOLON
Rule 83    metodos -> KMEANS OPAREN varcte COMMA mmmfunc CPAREN SCOLON
Rule 84    metodos -> DERL OPAREN expfunc CPAREN SCOLON
Rule 85    metodos -> DBERN OPAREN expfunc CPAREN SCOLON
Rule 86    metodos -> DPOI OPAREN expfunc2 CPAREN SCOLON
Rule 87    metodos -> TRANSPOSE OPAREN mmmfunc CPAREN SCOLON
Rule 88    metodos -> INVERSE OPAREN mmmfunc CPAREN SCOLON
Rule 89    metodos -> ROTATE OPAREN mmmfunc CPAREN SCOLON
Rule 90    metodos -> REF OPAREN mmmfunc CPAREN SCOLON
Rule 91    metodos -> RREF OPAREN mmmfunc CPAREN SCOLON
Rule 92    metodos -> MONT OPAREN mmmfunc CPAREN SCOLON
Rule 93    expfunc -> ID COMMA ID COMMA ID
Rule 94    expfunc -> varcte COMMA varcte COMMA varcte
Rule 95    expfunc2 -> ID COMMA ID
Rule 96    expfunc2 -> varcte COMMA varcte
Rule 97    mmmfunc -> ID
Rule 98    mmmfunc -> OBRACKET mmmarray CBRACKET
Rule 99    mmmfunc -> OBRACKET mmmarray CBRACKET COMMA mmmfunc
Rule 100   mmmfunc -> empty
Rule 101   mmmarray -> varcte
Rule 102   mmmarray -> varcte COMMA mmmarray
Rule 103   mmmarray -> empty
Rule 104   empty -> <empty>

Terminals, with rules where they appear

AND                  : 
BOOL                 : 20
CBRACKET             : 15 98 99
CHAR                 : 23
CHARACTER            : 
COLON                : 7 12
COMMA                : 9 11 46 53 53 54 54 54 57 58 58 83 93 93 94 94 95 96 99 102
COMMENT              : 
COUNT                : 53
COUNTIF              : 54
CPAREN               : 12 42 43 44 45 51 52 53 54 55 56 71 79 80 81 82 83 84 85 86 87 88 89 90 91 92
CTED                 : 
CTEI                 : 
DBERN                : 85
DERL                 : 84
DIFF                 : 
DIV                  : 70
DOUBLE               : 21
DPOI                 : 86
ELSE                 : 52
EQ                   : 
EQUALS               : 31 32 33 34 35 36 60 61
FUNC                 : 12
FX                   : 60
FY                   : 61
GRE                  : 
GREATEQ              : 
GREATERTHAN          : 
ID                   : 1 8 9 10 11 12 31 32 32 33 33 34 34 35 36 36 44 48 49 53 54 75 76 93 93 93 95 95 97
IF                   : 51 52
INT                  : 19
INTEGER              : 
INVERSE              : 88
KMEANS               : 83
LCOR                 : 37 38 39 40 57 58
LESSEQ               : 
LESSTHAN             : 
LOGICAL              : 
LUGSTAT              : 1
MEAN                 : 79
MEDIAN               : 80
MINUS                : 67 73
MODE                 : 81
MONT                 : 92
MULT                 : 69
NUMBER               : 78
NUMERIC              : 77
OBRACKET             : 15 98 99
OPAREN               : 12 42 43 44 45 51 52 53 54 55 56 71 79 80 81 82 83 84 85 86 87 88 89 90 91 92
OR                   : 
PER                  : 
PLOT                 : 55 56
PLUS                 : 66 72
PRINT                : 42 43 44 45
QUOTE                : 
RCOR                 : 37 38 39 40 57 58
REF                  : 90
RELOP                : 64
ROTATE               : 89
RREF                 : 91
SCOLON               : 1 7 31 32 33 34 35 36 42 43 44 45 51 52 53 54 55 56 60 61 79 80 81 82 83 84 85 86 87 88 89 90 91 92
STDV                 : 82
STRING               : 22 45 50
TIPO                 : 
TRANSPOSE            : 87
VAR                  : 7
error                : 

Nonterminals, with rules where they appear

asign                : 24
asign2               : 10 11 33 34 35 36 36 76
asign3               : 37 38
block                : 1 12 51 52 52
block2               : 15 17
cond                 : 25 54
count                : 28
countif              : 29
empty                : 3 6 14 18 41 47 59 62 100 103
escrt                : 26
escrt2               : 44 48 50 50
escrt3               : 46
estatuto             : 16 17
exp                  : 60 61 63 64 66 67
expfunc              : 84 85
expfunc2             : 86
expresion            : 31 35 37 39 42 51 52 64 71
factor               : 68 69 70
lugstat              : 0
lugstat2             : 1
lugstat3             : 1 5
metodos              : 30
mmmarray             : 98 99 102
mmmfunc              : 79 80 81 82 83 87 88 89 90 91 92 99
modules              : 4 5
modules2             : 12 12
plot                 : 27
plot2                : 56 58
termino              : 65 66 67 69 70
tipo                 : 7 12
varcte               : 38 40 53 53 54 54 57 57 58 58 72 73 74 83 94 94 94 96 96 101 102
vars                 : 2 13
vars1                : 7 9 11
xyfunc               : 55 60 61

Parsing method: LALR

state 0

    (0) S' -> . lugstat
    (1) lugstat -> . LUGSTAT ID SCOLON lugstat2 lugstat3 block

    LUGSTAT         shift and go to state 2

    lugstat                        shift and go to state 1

state 1

    (0) S' -> lugstat .



state 2

    (1) lugstat -> LUGSTAT . ID SCOLON lugstat2 lugstat3 block

    ID              shift and go to state 3


state 3

    (1) lugstat -> LUGSTAT ID . SCOLON lugstat2 lugstat3 block

    SCOLON          shift and go to state 4


state 4

    (1) lugstat -> LUGSTAT ID SCOLON . lugstat2 lugstat3 block
    (2) lugstat2 -> . vars
    (3) lugstat2 -> . empty
    (7) vars -> . VAR vars1 COLON tipo SCOLON
    (104) empty -> .

    VAR             shift and go to state 8
    FUNC            reduce using rule 104 (empty -> .)
    OBRACKET        reduce using rule 104 (empty -> .)

    lugstat2                       shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) lugstat -> LUGSTAT ID SCOLON lugstat2 . lugstat3 block
    (4) lugstat3 -> . modules
    (5) lugstat3 -> . modules lugstat3
    (6) lugstat3 -> . empty
    (12) modules -> . FUNC ID COLON tipo OPAREN modules2 CPAREN modules2 block
    (104) empty -> .

    FUNC            shift and go to state 12
    OBRACKET        reduce using rule 104 (empty -> .)

    lugstat3                       shift and go to state 9
    modules                        shift and go to state 10
    empty                          shift and go to state 11

state 6

    (2) lugstat2 -> vars .

    FUNC            reduce using rule 2 (lugstat2 -> vars .)
    OBRACKET        reduce using rule 2 (lugstat2 -> vars .)


state 7

    (3) lugstat2 -> empty .

    FUNC            reduce using rule 3 (lugstat2 -> empty .)
    OBRACKET        reduce using rule 3 (lugstat2 -> empty .)


state 8

    (7) vars -> VAR . vars1 COLON tipo SCOLON
    (8) vars1 -> . ID
    (9) vars1 -> . ID COMMA vars1
    (10) vars1 -> . ID asign2
    (11) vars1 -> . ID asign2 COMMA vars1

    ID              shift and go to state 14

    vars1                          shift and go to state 13

state 9

    (1) lugstat -> LUGSTAT ID SCOLON lugstat2 lugstat3 . block
    (15) block -> . OBRACKET block2 CBRACKET

    OBRACKET        shift and go to state 15

    block                          shift and go to state 16

state 10

    (4) lugstat3 -> modules .
    (5) lugstat3 -> modules . lugstat3
    (4) lugstat3 -> . modules
    (5) lugstat3 -> . modules lugstat3
    (6) lugstat3 -> . empty
    (12) modules -> . FUNC ID COLON tipo OPAREN modules2 CPAREN modules2 block
    (104) empty -> .

  ! reduce/reduce conflict for OBRACKET resolved using rule 4 (lugstat3 -> modules .)
    OBRACKET        reduce using rule 4 (lugstat3 -> modules .)
    FUNC            shift and go to state 12

  ! OBRACKET        [ reduce using rule 104 (empty -> .) ]

    lugstat3                       shift and go to state 17
    modules                        shift and go to state 10
    empty                          shift and go to state 11

state 11

    (6) lugstat3 -> empty .

    OBRACKET        reduce using rule 6 (lugstat3 -> empty .)


state 12

    (12) modules -> FUNC . ID COLON tipo OPAREN modules2 CPAREN modules2 block

    ID              shift and go to state 18


state 13

    (7) vars -> VAR vars1 . COLON tipo SCOLON

    COLON           shift and go to state 19


state 14

    (8) vars1 -> ID .
    (9) vars1 -> ID . COMMA vars1
    (10) vars1 -> ID . asign2
    (11) vars1 -> ID . asign2 COMMA vars1
    (37) asign2 -> . LCOR expresion RCOR asign3
    (38) asign2 -> . LCOR varcte RCOR asign3

    COLON           reduce using rule 8 (vars1 -> ID .)
    COMMA           shift and go to state 21
    LCOR            shift and go to state 22

    asign2                         shift and go to state 20

state 15

    (15) block -> OBRACKET . block2 CBRACKET
    (16) block2 -> . estatuto
    (17) block2 -> . estatuto block2
    (18) block2 -> . empty
    (24) estatuto -> . asign
    (25) estatuto -> . cond
    (26) estatuto -> . escrt
    (27) estatuto -> . plot
    (28) estatuto -> . count
    (29) estatuto -> . countif
    (30) estatuto -> . metodos
    (104) empty -> .
    (31) asign -> . ID EQUALS expresion SCOLON
    (32) asign -> . ID EQUALS ID SCOLON
    (33) asign -> . ID EQUALS ID asign2 SCOLON
    (34) asign -> . ID asign2 EQUALS ID SCOLON
    (35) asign -> . ID asign2 EQUALS expresion SCOLON
    (36) asign -> . ID asign2 EQUALS ID asign2 SCOLON
    (51) cond -> . IF OPAREN expresion CPAREN block SCOLON
    (52) cond -> . IF OPAREN expresion CPAREN block ELSE block SCOLON
    (42) escrt -> . PRINT OPAREN expresion CPAREN SCOLON
    (43) escrt -> . PRINT OPAREN CPAREN SCOLON
    (44) escrt -> . PRINT OPAREN ID escrt2 CPAREN SCOLON
    (45) escrt -> . PRINT OPAREN STRING CPAREN SCOLON
    (55) plot -> . PLOT OPAREN xyfunc CPAREN SCOLON
    (56) plot -> . PLOT OPAREN plot2 CPAREN SCOLON
    (53) count -> . COUNT OPAREN ID COMMA varcte COMMA varcte CPAREN SCOLON
    (54) countif -> . COUNTIF OPAREN ID COMMA varcte COMMA varcte COMMA cond CPAREN SCOLON
    (79) metodos -> . MEAN OPAREN mmmfunc CPAREN SCOLON
    (80) metodos -> . MEDIAN OPAREN mmmfunc CPAREN SCOLON
    (81) metodos -> . MODE OPAREN mmmfunc CPAREN SCOLON
    (82) metodos -> . STDV OPAREN mmmfunc CPAREN SCOLON
    (83) metodos -> . KMEANS OPAREN varcte COMMA mmmfunc CPAREN SCOLON
    (84) metodos -> . DERL OPAREN expfunc CPAREN SCOLON
    (85) metodos -> . DBERN OPAREN expfunc CPAREN SCOLON
    (86) metodos -> . DPOI OPAREN expfunc2 CPAREN SCOLON
    (87) metodos -> . TRANSPOSE OPAREN mmmfunc CPAREN SCOLON
    (88) metodos -> . INVERSE OPAREN mmmfunc CPAREN SCOLON
    (89) metodos -> . ROTATE OPAREN mmmfunc CPAREN SCOLON
    (90) metodos -> . REF OPAREN mmmfunc CPAREN SCOLON
    (91) metodos -> . RREF OPAREN mmmfunc CPAREN SCOLON
    (92) metodos -> . MONT OPAREN mmmfunc CPAREN SCOLON

    CBRACKET        reduce using rule 104 (empty -> .)
    ID              shift and go to state 42
    IF              shift and go to state 43
    PRINT           shift and go to state 29
    PLOT            shift and go to state 45
    COUNT           shift and go to state 37
    COUNTIF         shift and go to state 26
    MEAN            shift and go to state 36
    MEDIAN          shift and go to state 33
    MODE            shift and go to state 47
    STDV            shift and go to state 40
    KMEANS          shift and go to state 25
    DERL            shift and go to state 52
    DBERN           shift and go to state 28
    DPOI            shift and go to state 41
    TRANSPOSE       shift and go to state 24
    INVERSE         shift and go to state 38
    ROTATE          shift and go to state 46
    REF             shift and go to state 30
    RREF            shift and go to state 51
    MONT            shift and go to state 34

    count                          shift and go to state 44
    plot                           shift and go to state 31
    block2                         shift and go to state 23
    estatuto                       shift and go to state 32
    asign                          shift and go to state 48
    metodos                        shift and go to state 39
    countif                        shift and go to state 49
    escrt                          shift and go to state 50
    cond                           shift and go to state 27
    empty                          shift and go to state 35

state 16

    (1) lugstat -> LUGSTAT ID SCOLON lugstat2 lugstat3 block .

    $end            reduce using rule 1 (lugstat -> LUGSTAT ID SCOLON lugstat2 lugstat3 block .)


state 17

    (5) lugstat3 -> modules lugstat3 .

    OBRACKET        reduce using rule 5 (lugstat3 -> modules lugstat3 .)


state 18

    (12) modules -> FUNC ID . COLON tipo OPAREN modules2 CPAREN modules2 block

    COLON           shift and go to state 53


state 19

    (7) vars -> VAR vars1 COLON . tipo SCOLON
    (19) tipo -> . INT
    (20) tipo -> . BOOL
    (21) tipo -> . DOUBLE
    (22) tipo -> . STRING
    (23) tipo -> . CHAR

    INT             shift and go to state 56
    BOOL            shift and go to state 59
    DOUBLE          shift and go to state 57
    STRING          shift and go to state 54
    CHAR            shift and go to state 58

    tipo                           shift and go to state 55

state 20

    (10) vars1 -> ID asign2 .
    (11) vars1 -> ID asign2 . COMMA vars1

    COLON           reduce using rule 10 (vars1 -> ID asign2 .)
    COMMA           shift and go to state 60


state 21

    (9) vars1 -> ID COMMA . vars1
    (8) vars1 -> . ID
    (9) vars1 -> . ID COMMA vars1
    (10) vars1 -> . ID asign2
    (11) vars1 -> . ID asign2 COMMA vars1

    ID              shift and go to state 14

    vars1                          shift and go to state 61

state 22

    (37) asign2 -> LCOR . expresion RCOR asign3
    (38) asign2 -> LCOR . varcte RCOR asign3
    (63) expresion -> . exp
    (64) expresion -> . expresion RELOP exp
    (75) varcte -> . ID
    (76) varcte -> . ID asign2
    (77) varcte -> . NUMERIC
    (78) varcte -> . NUMBER
    (65) exp -> . termino
    (66) exp -> . termino PLUS exp
    (67) exp -> . termino MINUS exp
    (68) termino -> . factor
    (69) termino -> . factor MULT termino
    (70) termino -> . factor DIV termino
    (71) factor -> . OPAREN expresion CPAREN
    (72) factor -> . PLUS varcte
    (73) factor -> . MINUS varcte
    (74) factor -> . varcte

    ID              shift and go to state 72
    NUMERIC         shift and go to state 66
    NUMBER          shift and go to state 65
    OPAREN          shift and go to state 64
    PLUS            shift and go to state 68
    MINUS           shift and go to state 67

    expresion                      shift and go to state 62
    varcte                         shift and go to state 63
    termino                        shift and go to state 69
    exp                            shift and go to state 70
    factor                         shift and go to state 71

state 23

    (15) block -> OBRACKET block2 . CBRACKET

    CBRACKET        shift and go to state 73


state 24

    (87) metodos -> TRANSPOSE . OPAREN mmmfunc CPAREN SCOLON

    OPAREN          shift and go to state 74


state 25

    (83) metodos -> KMEANS . OPAREN varcte COMMA mmmfunc CPAREN SCOLON

    OPAREN          shift and go to state 75


state 26

    (54) countif -> COUNTIF . OPAREN ID COMMA varcte COMMA varcte COMMA cond CPAREN SCOLON

    OPAREN          shift and go to state 76


state 27

    (25) estatuto -> cond .

    ID              reduce using rule 25 (estatuto -> cond .)
    IF              reduce using rule 25 (estatuto -> cond .)
    PRINT           reduce using rule 25 (estatuto -> cond .)
    PLOT            reduce using rule 25 (estatuto -> cond .)
    COUNT           reduce using rule 25 (estatuto -> cond .)
    COUNTIF         reduce using rule 25 (estatuto -> cond .)
    MEAN            reduce using rule 25 (estatuto -> cond .)
    MEDIAN          reduce using rule 25 (estatuto -> cond .)
    MODE            reduce using rule 25 (estatuto -> cond .)
    STDV            reduce using rule 25 (estatuto -> cond .)
    KMEANS          reduce using rule 25 (estatuto -> cond .)
    DERL            reduce using rule 25 (estatuto -> cond .)
    DBERN           reduce using rule 25 (estatuto -> cond .)
    DPOI            reduce using rule 25 (estatuto -> cond .)
    TRANSPOSE       reduce using rule 25 (estatuto -> cond .)
    INVERSE         reduce using rule 25 (estatuto -> cond .)
    ROTATE          reduce using rule 25 (estatuto -> cond .)
    REF             reduce using rule 25 (estatuto -> cond .)
    RREF            reduce using rule 25 (estatuto -> cond .)
    MONT            reduce using rule 25 (estatuto -> cond .)
    CBRACKET        reduce using rule 25 (estatuto -> cond .)


state 28

    (85) metodos -> DBERN . OPAREN expfunc CPAREN SCOLON

    OPAREN          shift and go to state 77


state 29

    (42) escrt -> PRINT . OPAREN expresion CPAREN SCOLON
    (43) escrt -> PRINT . OPAREN CPAREN SCOLON
    (44) escrt -> PRINT . OPAREN ID escrt2 CPAREN SCOLON
    (45) escrt -> PRINT . OPAREN STRING CPAREN SCOLON

    OPAREN          shift and go to state 78


state 30

    (90) metodos -> REF . OPAREN mmmfunc CPAREN SCOLON

    OPAREN          shift and go to state 79


state 31

    (27) estatuto -> plot .

    ID              reduce using rule 27 (estatuto -> plot .)
    IF              reduce using rule 27 (estatuto -> plot .)
    PRINT           reduce using rule 27 (estatuto -> plot .)
    PLOT            reduce using rule 27 (estatuto -> plot .)
    COUNT           reduce using rule 27 (estatuto -> plot .)
    COUNTIF         reduce using rule 27 (estatuto -> plot .)
    MEAN            reduce using rule 27 (estatuto -> plot .)
    MEDIAN          reduce using rule 27 (estatuto -> plot .)
    MODE            reduce using rule 27 (estatuto -> plot .)
    STDV            reduce using rule 27 (estatuto -> plot .)
    KMEANS          reduce using rule 27 (estatuto -> plot .)
    DERL            reduce using rule 27 (estatuto -> plot .)
    DBERN           reduce using rule 27 (estatuto -> plot .)
    DPOI            reduce using rule 27 (estatuto -> plot .)
    TRANSPOSE       reduce using rule 27 (estatuto -> plot .)
    INVERSE         reduce using rule 27 (estatuto -> plot .)
    ROTATE          reduce using rule 27 (estatuto -> plot .)
    REF             reduce using rule 27 (estatuto -> plot .)
    RREF            reduce using rule 27 (estatuto -> plot .)
    MONT            reduce using rule 27 (estatuto -> plot .)
    CBRACKET        reduce using rule 27 (estatuto -> plot .)


state 32

    (16) block2 -> estatuto .
    (17) block2 -> estatuto . block2
    (16) block2 -> . estatuto
    (17) block2 -> . estatuto block2
    (18) block2 -> . empty
    (24) estatuto -> . asign
    (25) estatuto -> . cond
    (26) estatuto -> . escrt
    (27) estatuto -> . plot
    (28) estatuto -> . count
    (29) estatuto -> . countif
    (30) estatuto -> . metodos
    (104) empty -> .
    (31) asign -> . ID EQUALS expresion SCOLON
    (32) asign -> . ID EQUALS ID SCOLON
    (33) asign -> . ID EQUALS ID asign2 SCOLON
    (34) asign -> . ID asign2 EQUALS ID SCOLON
    (35) asign -> . ID asign2 EQUALS expresion SCOLON
    (36) asign -> . ID asign2 EQUALS ID asign2 SCOLON
    (51) cond -> . IF OPAREN expresion CPAREN block SCOLON
    (52) cond -> . IF OPAREN expresion CPAREN block ELSE block SCOLON
    (42) escrt -> . PRINT OPAREN expresion CPAREN SCOLON
    (43) escrt -> . PRINT OPAREN CPAREN SCOLON
    (44) escrt -> . PRINT OPAREN ID escrt2 CPAREN SCOLON
    (45) escrt -> . PRINT OPAREN STRING CPAREN SCOLON
    (55) plot -> . PLOT OPAREN xyfunc CPAREN SCOLON
    (56) plot -> . PLOT OPAREN plot2 CPAREN SCOLON
    (53) count -> . COUNT OPAREN ID COMMA varcte COMMA varcte CPAREN SCOLON
    (54) countif -> . COUNTIF OPAREN ID COMMA varcte COMMA varcte COMMA cond CPAREN SCOLON
    (79) metodos -> . MEAN OPAREN mmmfunc CPAREN SCOLON
    (80) metodos -> . MEDIAN OPAREN mmmfunc CPAREN SCOLON
    (81) metodos -> . MODE OPAREN mmmfunc CPAREN SCOLON
    (82) metodos -> . STDV OPAREN mmmfunc CPAREN SCOLON
    (83) metodos -> . KMEANS OPAREN varcte COMMA mmmfunc CPAREN SCOLON
    (84) metodos -> . DERL OPAREN expfunc CPAREN SCOLON
    (85) metodos -> . DBERN OPAREN expfunc CPAREN SCOLON
    (86) metodos -> . DPOI OPAREN expfunc2 CPAREN SCOLON
    (87) metodos -> . TRANSPOSE OPAREN mmmfunc CPAREN SCOLON
    (88) metodos -> . INVERSE OPAREN mmmfunc CPAREN SCOLON
    (89) metodos -> . ROTATE OPAREN mmmfunc CPAREN SCOLON
    (90) metodos -> . REF OPAREN mmmfunc CPAREN SCOLON
    (91) metodos -> . RREF OPAREN mmmfunc CPAREN SCOLON
    (92) metodos -> . MONT OPAREN mmmfunc CPAREN SCOLON

  ! reduce/reduce conflict for CBRACKET resolved using rule 16 (block2 -> estatuto .)
    CBRACKET        reduce using rule 16 (block2 -> estatuto .)
    ID              shift and go to state 42
    IF              shift and go to state 43
    PRINT           shift and go to state 29
    PLOT            shift and go to state 45
    COUNT           shift and go to state 37
    COUNTIF         shift and go to state 26
    MEAN            shift and go to state 36
    MEDIAN          shift and go to state 33
    MODE            shift and go to state 47
    STDV            shift and go to state 40
    KMEANS          shift and go to state 25
    DERL            shift and go to state 52
    DBERN           shift and go to state 28
    DPOI            shift and go to state 41
    TRANSPOSE       shift and go to state 24
    INVERSE         shift and go to state 38
    ROTATE          shift and go to state 46
    REF             shift and go to state 30
    RREF            shift and go to state 51
    MONT            shift and go to state 34

  ! CBRACKET        [ reduce using rule 104 (empty -> .) ]

    count                          shift and go to state 44
    plot                           shift and go to state 31
    block2                         shift and go to state 80
    estatuto                       shift and go to state 32
    asign                          shift and go to state 48
    metodos                        shift and go to state 39
    countif                        shift and go to state 49
    escrt                          shift and go to state 50
    cond                           shift and go to state 27
    empty                          shift and go to state 35

state 33

    (80) metodos -> MEDIAN . OPAREN mmmfunc CPAREN SCOLON

    OPAREN          shift and go to state 81


state 34

    (92) metodos -> MONT . OPAREN mmmfunc CPAREN SCOLON

    OPAREN          shift and go to state 82


state 35

    (18) block2 -> empty .

    CBRACKET        reduce using rule 18 (block2 -> empty .)


state 36

    (79) metodos -> MEAN . OPAREN mmmfunc CPAREN SCOLON

    OPAREN          shift and go to state 83


state 37

    (53) count -> COUNT . OPAREN ID COMMA varcte COMMA varcte CPAREN SCOLON

    OPAREN          shift and go to state 84


state 38

    (88) metodos -> INVERSE . OPAREN mmmfunc CPAREN SCOLON

    OPAREN          shift and go to state 85


state 39

    (30) estatuto -> metodos .

    ID              reduce using rule 30 (estatuto -> metodos .)
    IF              reduce using rule 30 (estatuto -> metodos .)
    PRINT           reduce using rule 30 (estatuto -> metodos .)
    PLOT            reduce using rule 30 (estatuto -> metodos .)
    COUNT           reduce using rule 30 (estatuto -> metodos .)
    COUNTIF         reduce using rule 30 (estatuto -> metodos .)
    MEAN            reduce using rule 30 (estatuto -> metodos .)
    MEDIAN          reduce using rule 30 (estatuto -> metodos .)
    MODE            reduce using rule 30 (estatuto -> metodos .)
    STDV            reduce using rule 30 (estatuto -> metodos .)
    KMEANS          reduce using rule 30 (estatuto -> metodos .)
    DERL            reduce using rule 30 (estatuto -> metodos .)
    DBERN           reduce using rule 30 (estatuto -> metodos .)
    DPOI            reduce using rule 30 (estatuto -> metodos .)
    TRANSPOSE       reduce using rule 30 (estatuto -> metodos .)
    INVERSE         reduce using rule 30 (estatuto -> metodos .)
    ROTATE          reduce using rule 30 (estatuto -> metodos .)
    REF             reduce using rule 30 (estatuto -> metodos .)
    RREF            reduce using rule 30 (estatuto -> metodos .)
    MONT            reduce using rule 30 (estatuto -> metodos .)
    CBRACKET        reduce using rule 30 (estatuto -> metodos .)


state 40

    (82) metodos -> STDV . OPAREN mmmfunc CPAREN SCOLON

    OPAREN          shift and go to state 86


state 41

    (86) metodos -> DPOI . OPAREN expfunc2 CPAREN SCOLON

    OPAREN          shift and go to state 87


state 42

    (31) asign -> ID . EQUALS expresion SCOLON
    (32) asign -> ID . EQUALS ID SCOLON
    (33) asign -> ID . EQUALS ID asign2 SCOLON
    (34) asign -> ID . asign2 EQUALS ID SCOLON
    (35) asign -> ID . asign2 EQUALS expresion SCOLON
    (36) asign -> ID . asign2 EQUALS ID asign2 SCOLON
    (37) asign2 -> . LCOR expresion RCOR asign3
    (38) asign2 -> . LCOR varcte RCOR asign3

    EQUALS          shift and go to state 89
    LCOR            shift and go to state 22

    asign2                         shift and go to state 88

state 43

    (51) cond -> IF . OPAREN expresion CPAREN block SCOLON
    (52) cond -> IF . OPAREN expresion CPAREN block ELSE block SCOLON

    OPAREN          shift and go to state 90


state 44

    (28) estatuto -> count .

    ID              reduce using rule 28 (estatuto -> count .)
    IF              reduce using rule 28 (estatuto -> count .)
    PRINT           reduce using rule 28 (estatuto -> count .)
    PLOT            reduce using rule 28 (estatuto -> count .)
    COUNT           reduce using rule 28 (estatuto -> count .)
    COUNTIF         reduce using rule 28 (estatuto -> count .)
    MEAN            reduce using rule 28 (estatuto -> count .)
    MEDIAN          reduce using rule 28 (estatuto -> count .)
    MODE            reduce using rule 28 (estatuto -> count .)
    STDV            reduce using rule 28 (estatuto -> count .)
    KMEANS          reduce using rule 28 (estatuto -> count .)
    DERL            reduce using rule 28 (estatuto -> count .)
    DBERN           reduce using rule 28 (estatuto -> count .)
    DPOI            reduce using rule 28 (estatuto -> count .)
    TRANSPOSE       reduce using rule 28 (estatuto -> count .)
    INVERSE         reduce using rule 28 (estatuto -> count .)
    ROTATE          reduce using rule 28 (estatuto -> count .)
    REF             reduce using rule 28 (estatuto -> count .)
    RREF            reduce using rule 28 (estatuto -> count .)
    MONT            reduce using rule 28 (estatuto -> count .)
    CBRACKET        reduce using rule 28 (estatuto -> count .)


state 45

    (55) plot -> PLOT . OPAREN xyfunc CPAREN SCOLON
    (56) plot -> PLOT . OPAREN plot2 CPAREN SCOLON

    OPAREN          shift and go to state 91


state 46

    (89) metodos -> ROTATE . OPAREN mmmfunc CPAREN SCOLON

    OPAREN          shift and go to state 92


state 47

    (81) metodos -> MODE . OPAREN mmmfunc CPAREN SCOLON

    OPAREN          shift and go to state 93


state 48

    (24) estatuto -> asign .

    ID              reduce using rule 24 (estatuto -> asign .)
    IF              reduce using rule 24 (estatuto -> asign .)
    PRINT           reduce using rule 24 (estatuto -> asign .)
    PLOT            reduce using rule 24 (estatuto -> asign .)
    COUNT           reduce using rule 24 (estatuto -> asign .)
    COUNTIF         reduce using rule 24 (estatuto -> asign .)
    MEAN            reduce using rule 24 (estatuto -> asign .)
    MEDIAN          reduce using rule 24 (estatuto -> asign .)
    MODE            reduce using rule 24 (estatuto -> asign .)
    STDV            reduce using rule 24 (estatuto -> asign .)
    KMEANS          reduce using rule 24 (estatuto -> asign .)
    DERL            reduce using rule 24 (estatuto -> asign .)
    DBERN           reduce using rule 24 (estatuto -> asign .)
    DPOI            reduce using rule 24 (estatuto -> asign .)
    TRANSPOSE       reduce using rule 24 (estatuto -> asign .)
    INVERSE         reduce using rule 24 (estatuto -> asign .)
    ROTATE          reduce using rule 24 (estatuto -> asign .)
    REF             reduce using rule 24 (estatuto -> asign .)
    RREF            reduce using rule 24 (estatuto -> asign .)
    MONT            reduce using rule 24 (estatuto -> asign .)
    CBRACKET        reduce using rule 24 (estatuto -> asign .)


state 49

    (29) estatuto -> countif .
